fix(less): header alignment

--- a/less/info.less
+++ b/less/info.less
@@ -313,6 +313,7 @@
     h4 {
         margin-top: 25px;
         font-size: 22px;
+        text-align: center;
     }
 }
 
